--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <h1>My Portfolio</h1>
 
     <div class="project">
-        <h2>Project 1</h2>
-        <p>Description of Project 1.</p>
-        <a href="#" target="_blank">View Project 1</a>
+        <h2>Facebook</h2>
+        <p>add friend test</p>
+        <a href="fb/index.html" target="_blank">View Project 1</a>
     </div>
 
     <div class="project">
-        <h2>Project 2</h2>
+        <h2>Follow</h2>
         <p>Description of Project 2.</p>
-        <a href="#" target="_blank">View Project 2</a>
+        <a href="follow/index.html" target="_blank">View Project 2</a>
     </div>
 
     <!-- Add more projects as needed -->
