--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="project">
         <h2>Facebook</h2>
         <p>add friend test</p>
-        <a href="fb/index.html" target="_blank">View Project 1</a>
+        <a href="fb add friend/index.html" target="_blank">View Project 1</a>
     </div>
 
     <div class="project">
