--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
         .project {
             margin-bottom: 20px;
         }
+
+        a {
+            text-transform: uppercase;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
     <h1>My Portfolio</h1>
+
+    <div class="container" style="
+        display: flex;
+        flex-wrap: wrap;
+        ">
 
     <div class="project">
         <h2>Facebook</h2>
@@ -27,6 +37,6 @@
     </div>
 
     <!-- Add more projects as needed -->
-
+    </div>
 </body>
 </html>
