--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
   <h1>My Portfolio</h1>
 
   <div class="container">
-
+    
     <div class="project">
       <h2 class="project-title">Facebook</h2>
+      <p class="project-description">Facebook Copy</p>
+      <a href="facebook/inde.html" target="_blank">
+        View Project</a>
+    </div>
+
+    <div class="project">
+      <h2 class="project-title">Facebook test</h2>
       <p class="project-description">add friend test</p>
       <a href="fb add friend/index.html" target="_blank">
         View Project</a>
