--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="project">
       <h2 class="project-title">Facebook</h2>
       <p class="project-description">Facebook Copy</p>
-      <a href="facebook/inde.html" target="_blank">
+      <a href="facebook/index.html" target="_blank">
         View Project</a>
     </div>
 
